pingpong-app/manifests/pingpong-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes:
        - name: counter
          persistentVolumeClaim:
            claimName: shared-data-claim
      containers:
      - name: pingpong
        image: mahansa/pingpong-app:latest
        ports:
        - containerPort: 3000
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /app/data
            name: counter
---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-service
  namespace: default
spec:
  selector:
    app: pingpong
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
