pingpong-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-app
spec:
  selector:
    app: pingpong-app
  ports:
  - port: 80
    targetPort: 3000
